# bioseqkit

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  bench.py  results.csv
config/: config.yaml
docs/: conf.py  index.rst  quickstart.md
examples/: demo.ipynb
examples/example_data/: sample.fa
src/bioseqkit/: __init__.py  cli.py  entrez.py  index.py  io.py  kmer.py  stats.py  transform.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_entrez.py  test_index.py  test_io.py  test_kmer.py  test_stats.py  test_transform.py
workflow/: Snakefile
